--- a/index.html
+++ b/index.html
@@ -64,14 +64,22 @@
 
     <!-- About Start -->
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
-   <div class="swiper-container">
-    <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="img/office.jfif" alt="Image 1"></div>
-        <div class="swiper-slide"><img src="img/image2.jpg" alt="Image 2"></div>
-        <div class="swiper-slide"><img src="img/image3.jpg" alt="Image 3"></div>
+    <div class="container">
+            <div class="row gx-5">
+                <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 300px;">
+                    <div class="position-relative h-100" style="border-radius: 15px; overflow: hidden;">
+              <div class="slideshow-container">
+    <div class="slide fade">
+      <img src="img/office.jfif" alt="Image 1" style="width:100%">
     </div>
-    <div class="swiper-pagination"></div>
-</div>
+
+    <div class="slide fade">
+      <img src="img/image2.jpg" alt="Image 2" style="width:100%">
+    </div>
+
+    <div class="slide fade">
+      <img src="img/image3.jpg" alt="Image 3" style="width:100%">
+    </div>
   </div>
                     </div>
                 </div>
