--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
-
+<link rel="preload" as="image" href="img/office.jfif">
+<link rel="preload" as="image" href="img/image2.jpg">
+<link rel="preload" as="image" href="img/image3.jpg">
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> 
