--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
-<link rel="preload" as="image" href="img/office.jfif">
-<link rel="preload" as="image" href="img/image2.jpg">
-<link rel="preload" as="image" href="img/image3.jpg">
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> 
@@ -72,15 +69,15 @@
                     <div class="position-relative h-100" style="border-radius: 15px; overflow: hidden;">
               <div class="slideshow-container">
     <div class="slide fade">
-      <img src="img/office.jfif" alt="Image 1" style="width:100%">
+      <img src="img/office.webp" alt="Image 1" style="width:100%">
     </div>
 
     <div class="slide fade">
-      <img src="img/image2.jpg" alt="Image 2" style="width:100%">
+      <img src="img/image2.webp" alt="Image 2" style="width:100%">
     </div>
 
     <div class="slide fade">
-      <img src="img/image3.jpg" alt="Image 3" style="width:100%">
+      <img src="img/image3.webp" alt="Image 3" style="width:100%">
     </div>
   </div>
                     </div>
