--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
+<link rel="preload" as="image" href="img/office.jfif">
+<link rel="preload" as="image" href="img/image2.jpg">
+<link rel="preload" as="image" href="img/image3.jpg">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
