--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
                     <div class="position-relative h-100" style="border-radius: 15px; overflow: hidden;">
               <div class="slideshow-container">
     <div class="slide fade">
-      <img src="img/office.webp" alt="Image 1" style="width:100%">
+      <img src="img/office.jpg" alt="Image 1" style="width:100%">
     </div>
 
     <div class="slide fade">
-      <img src="img/image2.webp" alt="Image 2" style="width:100%">
+      <img src="img/image1.jpg" alt="Image 2" style="width:100%">
     </div>
 
     <div class="slide fade">
-      <img src="img/image3.webp" alt="Image 3" style="width:100%">
+      <img src="img/image3.jpg" alt="Image 3" style="width:100%">
     </div>
   </div>
                     </div>
