--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
                     </div>
                 </div>
                 <div class="text-center">
-                    <img class="img-fluid mx-auto rounded-square" src="img/man2.PNG" style="width: 100px; height: 100px;" >
+                    <!--img class="img-fluid mx-auto rounded-square" src="img/man2.PNG" style="width: 100px; height: 100px;"-->
                     <div class="testimonial-text bg-light rounded p-4 mt-n5">
                         <p class="mt-5">
                           NexTech created an excellent system for our Quran competition, streamlining the entire process and making it easy to manage. Their expertise and dedication ensured that our platform was delivered on time and exceeded our expectations. I highly recommend their services for any digital project.
