--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
             </div>
             <div class="owl-carousel testimonial-carousel">
                 <div class="text-center pb-4">
-                    <img class="img-fluid mx-auto rounded-square" src="img/man.PNG" style="width: 100px; height: 100px;" >
+                    <!--img class="img-fluid mx-auto rounded-square" src="img/man.PNG" style="width: 100px; height: 100px;" -->
                     <div class="testimonial-text bg-light rounded p-4 mt-n5">
                         <p class="mt-5">
                            NexTech delivered a seamless, efficient website for our charity organization, helping us connect with more people and manage our activities more effectively. Their dedication and insights made the process smooth, and the final product exceeded our expectations. We highly recommend their services.
@@ -901,7 +901,7 @@
                     </div>
                 </div>
                 <div class="text-center">
-                    <img class="img-fluid mx-auto rounded-square" src="img/man3.PNG" style="width: 100px; height: 100px;" >
+                    <!--img class="img-fluid mx-auto rounded-square" src="img/man3.PNG" style="width: 100px; height: 100px;" -->
                     <div class="testimonial-text bg-light rounded p-4 mt-n5">
                         <p class="mt-5">
                         NexTech's web development services have significantly improved the efficiency of our clinic operations. Their expertise helped us build a professional, user-friendly website that aligns perfectly with our vision. They provided timely support throughout the process, and their insightful advice was crucial in creating a product that meets our needs.
